# iridium-project

./: .clang-tidy  .gitignore  README.md  meson.build
docs/: Langref.md
include/iridium/DT/: IntrusiveList.hpp  RefCount.hpp  SmallVector.hpp
include/iridium/IR/: Block.h  ConstantValue.h  ControlFlowOperators.h  FloatingPointOperators.h  Function.h  GlobalValue.h  GlobalVariable.h  IntegerOperators.h  LogicalOperators.h  LoopOperators.h  Module.h  Operator.h  OperatorTraits.h  Region.h  Type.h  Value.h
include/iridium/Support/: Debug.hpp  Name.hpp  OutputStream.hpp
lib/: meson.build
lib/DT/: RefCount.cpp  meson.build
lib/IR/: Block.cpp  ConstantValue.cpp  ControlFlowOperators.cpp  FloatingPointOperators.cpp  IntegerOperators.cpp  LogicalOperators.cpp  Module.cpp  Operator.cpp  OperatorTraits.cpp  Region.cpp  Type.cpp  Value.cpp  meson.build
lib/Support/: Name.cpp  OutputStream.cpp  meson.build
tools/: meson.build
tools/iridium-opt/: iridium-opt.cpp  meson.build
